loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:4: error: '(' expected but identifier found.
if estFaceMur(){
   ^LoopStairs:10: error: illegal start of simple expression
	}
        ^